[package]
name = "soulsy"
description = "A minimal Souls-like HUD for Skyrim AE. SKSE plugin."
version = "0.13.7"
edition = "2021"
authors = ["C J Silverio <ceejceej@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
keywords = ["skyrim", "c++"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bincode = "2.0.0-rc.3"
cxx = { version = "1.0.110", features = ["c++20"] }
enumset = "1.1.3"
eyre = "0.6.9"
log = "0.4.20"
lru = "0.12.0"
once_cell = "1.18.0"
resvg = "0.36.0"
rust-ini = "0.20.0"
serde = { version = "1.0.190", features = ["derive"] }
simplelog = "0.12.1"
spdlog-rs = { version = "0.3.12", features = ["source-location", "log"] }
strfmt = "0.2.4"
strum = { version = "0.25.0", features = ["derive"] }
toml = "0.8.6"

[build-dependencies]
cxx-build = "1.0.110"

[dev-dependencies]
petname = { version = "1.1.3", default-features = false, features = ["std_rng", "default_dictionary"] }
rand = "0.8.5"

[profile.release]
debug = true
