[package]
authors      = ["C J Silverio <ceejceej@gmail.com>"]
description  = "A minimal Souls-like HUD & hotkeys mod for Skyrim AE. SKSE plugin."
edition      = "2021"
keywords     = ["c++", "skyrim"]
license      = "GPL-3.0"
name         = "soulsy"
readme       = "README.md"
rust-version = "1.71.1"
version      = "0.16.2"

[lib]
crate-type = ["staticlib"]

[dependencies]
bincode   = "2.0.0-rc.3"
chardet = "0.2.4"
cxx       = { version = "1.0.111", features = ["c++20"] }
enumset   = "1.1.3"
eyre      = "0.6.9"
log       = "0.4.20"
lru       = "0.12.1"
once_cell = "1.18.0"
resvg     = "0.37.0"
rust-ini  = "0.20.0"
serde     = { version = "1.0.193", features = ["derive"] }
simplelog = "0.12.1"
strfmt    = "0.2.4"
strum     = { version = "0.25.0", features = ["derive"] }
textcode  = "0.2.2"
toml      = "0.8.6"

[build-dependencies]
cxx-build = "1.0.111"

[dev-dependencies]
petname = { version = "1.1.3", default-features = false, features = ["default_dictionary", "std_rng"] }
rand    = "0.8.5"

[profile.release]
debug = true
